--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,11 +12,9 @@
 
 </head>
 <body>
-  <div class='top'>
-    <div class="title">Michael Robert Bernstein</div>
-    <a class="extra" href="/">home</a>
-  </div>
   <div class = 'site'>
+    <div span="title">mrb : writings of Michael R. Bernstein</div>
+
     {{ content }}
     <div class='footer'>
       <div class="contact">
