--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,11 +12,9 @@
 
 </head>
 <body>
-  <div class='top'>
-    <div class="title">Michael Robert Bernstein</div>
-    <a class="extra" href="/">home</a>
-  </div>
-  <div class='site'>
+  <div class = 'site'>
+    <div span="title">mrb : <a href="/">home</a></div>
+
     <div id = 'post'>{{ content }}</div>
     <div class='footer'>
       <div class="contact">
