--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,8 +20,9 @@
       <div class="contact">
         <p>
           Michael Robert Bernstein<br />
-          github.com/mrb<br/>
-          michaelrbernstein@g m a i l.com
+          <a href="http://twitter.com/mrb_bk">@mrb_bk</a><br/>
+          <a href="http://github.com/mrb">github.com/mrb</a><br/>
+          michaelrbernstein@gmail.com<br/>
         </p>
       </div>
     </div>
