--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,6 +9,12 @@
   <link rel="stylesheet" href="/stylesheets/mrb.css" type="text/css" media="screen" charset="utf-8" />
   <link rel="stylesheet" href="/stylesheets/syntax.css" type="text/css" media="screen" charset="utf-8" />
   <script src="/javascripts/jquery.js" type="text/javascript" charset="utf-8"></script>
+
+  <script type="text/x-mathjax-config">
+    MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});
+  </script>
+
+  <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 <script type="text/javascript">
 
   var _gaq = _gaq || [];
