--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,7 +11,10 @@
   <script src="/javascripts/jquery.js" type="text/javascript" charset="utf-8"></script>
 
   <script type="text/x-mathjax-config">
-    MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});
+    MathJax.Hub.Config({
+      tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]},
+      TeX: { equationNumbers: {autoNumber: "AMS"}},
+    });
   </script>
 
   <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
