--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,7 @@
   <title>mrb: {{ page.title }}</title>
   <link rel="stylesheet" href="/stylesheets/mrb.css" type="text/css" media="screen" charset="utf-8" />
   <link rel="stylesheet" href="/stylesheets/syntax.css" type="text/css" media="screen" charset="utf-8" />
+  <link rel="alternate" type="application/rss+xml" title="{{ site.name }}" href="{{ site.url }}/feed.xml">
   <script src="/javascripts/jquery.js" type="text/javascript" charset="utf-8"></script>
 <script type="text/javascript">
 
