--- a/stylesheets/mrb.css
+++ b/stylesheets/mrb.css
@@ -16,7 +16,7 @@ body {
 
 h1 {
   font: 30px/34px 'DejaVuSerifCondensed-Bold', Arial, sans-serif;letter-spacing: 0;
-	margin-bottom: 1em;
+	margin-bottom: .4em;
 }
 
 h2{
@@ -171,4 +171,5 @@ blockquote{
 .lead{
   font-style:italic;
   font-size:85%;
+  margin-bottom: .4em;
 }
