Dist sys Part One

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,6 +36,7 @@
           Michael Robert Bernstein<br />
           <a href="http://twitter.com/mrb_bk">@mrb_bk</a><br/>
           <a href="http://github.com/mrb">github.com/mrb</a><br/>
+          <a href="http://gittip.com/mrb_bk">gittip.com/mrb_bk</a></br>
           michaelrbernstein@gmail.com<br/>
         </p>
       </div>
