--- a/_layouts/mathjax.html
+++ b/_layouts/mathjax.html
@@ -11,6 +11,14 @@
   <link rel="alternate" type="application/rss+xml" title="{{ site.name }}" href="{{ site.url }}/feed.xml">
   <script src="/javascripts/jquery.js" type="text/javascript" charset="utf-8"></script>
 
+  <script type="text/javascript" src="/javascripts/MathJax.js"></script>
+  <script type="text/x-mathjax-config">
+    MathJax.Hub.Config({
+      tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]},
+      TeX: { equationNumbers: {autoNumber: "AMS"}},
+    });
+  </script>
+
   <script type="text/javascript">
     var _gaq = _gaq || [];
     _gaq.push(['_setAccount', 'UA-38740175-1']);
@@ -22,7 +30,6 @@
       var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
     })();
   </script>
-
 </head>
 <body>
   <div class = 'site'>
