--- a/stylesheets/mrb.css
+++ b/stylesheets/mrb.css
@@ -117,6 +117,15 @@ li.index a:hover {
   overflow: hidden;
 }
 
+#cta {
+  font-size: 75%;
+  font-style: italic;
+  padding: 5px 10px 5px 10px;
+  border: 1px dashed grey;
+  margin: 15px 5px 20px 5px;
+  width: 100%;
+}
+
 #post {
    margin-left: auto;
    margin-right:auto;
