--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,6 +26,7 @@
 
 </head>
 <body>
+  <a href="/">Home</a>
   <div class = 'site'>
     {{ content }}
     <div class='footer'>
@@ -41,4 +42,3 @@
   </div>
 </body>
 </html>
-
